fix: updated gitignore following restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *.pyc
 *.env
-/build
-/eggs
-/input
-/logs
-/output
-/project.egg-info
-/twistd.pid
+src/build
+src/eggs
+src/input
+src/logs
+src/output
+src/project.egg-info
+src/twistd.pid
