test-fix: test_create_tables

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ scrapyd = "*"
 scrapyd-client = "*"
 sqlalchemy = "*"
 mysqlclient = "*"
+sqlalchemy-utils = "*"
 
 [requires]
 python_version = "3.7"
