--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,7 @@ mysqlclient = {path = "./mysqlclient-1.4.6-cp37-cp37m-win32.whl"}
 flask = "*"
 flask-sqlalchemy = "*"
 flask-wtf = "*"
+flask-bootstrap = "*"
 
 [requires]
 python_version = "3.7"
